# Remuroid

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: bundle.yml  publish.yml
buildSrc/src/main/java/: deps.kt
lemuroid-app/: build.gradle.kts  proguard-rules.pro
lemuroid-app/src/main/: AndroidManifest.xml
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/: LemuroidApplicationModule.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/mobile/feature/game/: MobileGameScreen.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/mobile/feature/gamemenu/coreoptions/: GameMenuCoreOptionsScreen.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/mobile/feature/home/: HomeScreen.kt  HomeViewModel.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/mobile/feature/main/: MainActivity.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/mobile/feature/settings/: SettingsManager.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/mobile/feature/settings/advanced/: AdvancedSettingsScreen.kt  AdvancedSettingsViewModel.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/mobile/feature/settings/general/: SettingsScreen.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/shared/coreoptions/: CoreOptionsPreferenceHelper.kt  LemuroidCoreOption.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/shared/game/: BaseGameActivity.kt  BaseGameScreenViewModel.kt  ShaderChooser.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/shared/game/viewmodel/: GameViewModelInput.kt  GameViewModelRetroGameView.kt  GameViewModelSaves.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/shared/gamemenu/: GameMenuHelper.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/shared/rumble/: RumbleManager.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/shared/settings/: AspectRatio.kt  StorageBaseDirPicker.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/tv/game/: TVGameScreen.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/utils/android/settings/: LemuroidSettingsList.kt
lemuroid-app/src/main/java/com/swordfish/lemuroid/app/utils/settings/: SafeIndexPreferenceSettingValueState.kt
lemuroid-app/src/main/res/values/: core_names.xml  keys.xml  strings.xml
lemuroid-app/src/main/res/xml/: tv_settings.xml
lemuroid-touchinput/src/main/java/com/swordfish/touchinput/radial/layouts/: Dreamcast.kt
lemuroid-touchinput/src/main/java/com/swordfish/touchinput/radial/settings/: TouchControllerID.kt
libretrodroid/: build.gradle.kts  proguard-rules.pro
libretrodroid/src/main/cpp/: CMakeLists.txt  environment.h  fpssync.cpp  libretrodroid.cpp
libretrodroid/src/main/cpp/resamplers/: linearresampler.cpp  sincresampler.cpp  sincresampler.h
libretrodroid/src/main/java/com/swordfish/libretrodroid/: GLRetroView.kt  LibretroDroid.java
retrograde-app-shared/src/main/java/com/swordfish/lemuroid/lib/bios/: BiosManager.kt
retrograde-app-shared/src/main/java/com/swordfish/lemuroid/lib/core/: CoreVariablesManager.kt
retrograde-app-shared/src/main/java/com/swordfish/lemuroid/lib/game/: AdaptivePerformanceManager.kt  GameLoader.kt
retrograde-app-shared/src/main/java/com/swordfish/lemuroid/lib/storage/: DirectoriesManager.kt  SafUriHelper.kt  StorageProvider.kt
retrograde-app-shared/src/main/java/com/swordfish/lemuroid/lib/storage/scanner/: SerialScanner.kt
retrograde-app-shared/src/main/res/drawable/: game_system_dreamcast.xml
retrograde-app-shared/src/main/res/values/: keys.xml  strings-game-system.xml  strings.xml
retrograde-util/src/main/java/com/swordfish/lemuroid/common/coroutines/: FlowUtils.kt
